# mr-tools

./: Cargo.toml  readme.md
mrcat/: Cargo.toml
mrcat/src/: lib.rs  main.rs
mrcat/tests/: mrcat_test.rs
mrecho/: Cargo.toml
mrecho/src/: main.rs
mrecho/tests/: mrecho.rs  mrecho_test.rs
rmcat/: Cargo.toml
src/: main.rs
