[package]
authors = ["misha.tavkhelidze <misha.tavkhelidze@gmail.com>"]
description = "Misha's cat"
edition = "2021"
license = "MIT"
name = "rmcat"
version = "0.1.0"

[dependencies]
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
anyhow = "1"
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
rand = "0.8"
